--- a/ui_lovelace_minimalist/dashboard/views/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/house.yaml
@@ -10,5 +10,80 @@ cards:
     template: card_title
     name: House
 
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.living_room_temperature
+        variables:
+          ulm_card_graph_color: "var(--google-red)"
+          ulm_card_graph_name: Temperature
+          ulm_card_graph_entity: sensor.living_room_temperature
+          ulm_card_graph_type: fill
+          ulm_card_graph_hours: 24
+          ulm_card_graph_group_by: interval
+          ulm_card_graph_line_width: 5
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.living_room_humidity
+        variables:
+          ulm_card_graph_color: "var(--google-blue)"
+          ulm_card_graph_name: Humidity
+          ulm_card_graph_entity: sensor.living_room_humidity
+          ulm_card_graph_type: fill
+          ulm_card_graph_hours: 24
+          ulm_card_graph_group_by: interval
+          ulm_card_graph_line_width: 5
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.masters_vue_123_1min
+        variables:
+          ulm_card_graph_color: "var(--google-yellow)"
+          ulm_card_graph_name: Electricity
+          ulm_card_graph_entity: sensor.masters_vue_123_1min
+          ulm_card_graph_type: fill
+          ulm_card_graph_hours: 24
+          ulm_card_graph_group_by: interval
+          ulm_card_graph_line_width: 5
+
   - type: thermostat
     entity: climate.living_room
+
+  - type: horizontal-stack
+    cards:
+      - type: custom:trash-card
+        entity: calendar.trash
+        layout: vertical
+        next_days: 8
+        settings:
+          others:
+            color: grey
+            icon: mdi:trash-can-outline
+
+      - type: custom:trash-card
+        entity: calendar.recycling
+        layout: vertical
+        next_days: 8
+        settings:
+          others:
+            color: amber
+            icon: mdi:recycle-variant
+
+      - type: custom:trash-card
+        entity: calendar.yard_waste
+        next_days: 8
+        layout: vertical
+        settings:
+          others:
+            color: green
+            icon: mdi:flower
+
+  - type: horizontal-stack
+    cards:
+      - type: custom:mini-graph-card
+        name: Share(s) %
+        icon: mdi:harddisk
+        unit: "%"
+        entities:
+          - sensor.aristodemos
+          - sensor.odysseus_used
