--- a/entities/sensors/system/count_entities.yaml
+++ b/entities/sensors/system/count_entities.yaml
@@ -6,7 +6,7 @@
 platform: template
 sensors:
   count_entities:
-    friendly_name: 'Number of Entities'
+    friendly_name: "Number of Entities"
     unique_id: 00796e1c-aa58-4cd8-bdd8-03ff6a76fd60
     value_template: >
       {{ states | length }}
