--- a/ui_lovelace_minimalist/dashboard/views/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/house.yaml
@@ -87,3 +87,6 @@ cards:
         entities:
           - sensor.aristodemos
           - sensor.odysseus_used
+
+  - type: shopping-list
+    title: Shopping List
