--- a/entities/templates/batteries_low.yaml
+++ b/entities/templates/batteries_low.yaml
@@ -7,16 +7,10 @@
   - name: Low Batteries
     unique_id: 78dd3601-03d4-4884-bf39-2e61a3b618cc
     icon: 'mdi:battery-30'
-    state: "{% set low = states.sensor
+    state: "{{ states.sensor
 | selectattr('entity_id','contains', 'battery')
-| selectattr('state', 'is_number') 
-| map(attribute='state') 
-| map('int') 
-| select('<', 35) 
-| map('string') 
-| list %}
-{{ states.sensor
-| selectattr('state', 'in', low) 
+| rejectattr('state', 'eq', '100')
+| selectattr('state', '<', '35') 
 | map(attribute='entity_id') 
-| list 
+| list
 | count }}"
