--- a/entities/templates/devices_offline.yaml
+++ b/entities/templates/devices_offline.yaml
@@ -8,7 +8,7 @@
     unique_id: e9f2af25-7bab-4ad2-8cd0-47f2b3cae058
     icon: 'mdi:cloud-off-outline'
     state: "{{ states
-| selectattr('domain','in',['binary_sensor','light','sensor','switch'])
+| selectattr('domain','in',['binary_sensor','light','sensor','switch','media_player'])
 | selectattr('state','in', ['unknown', 'unavailable', 'offline'])
 | map(attribute='entity_id')
 | list
