--- a/ui_lovelace_minimalist/dashboard/views/network.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/network.yaml
@@ -10,16 +10,48 @@ cards:
     template: card_title
     name: Net
 
+  - type: custom:button-card
+    template: custom_card_speedtest_shogun160
+    variables:
+      ulm_custom_card_speedtest_download_speed_entity: sensor.speedtest_download
+      ulm_custom_card_router_download_speed_entity: sensor.m5_download_speed
+      ulm_custom_card_speedtest_upload_speed_entity: sensor.speedtest_upload
+      ulm_custom_card_router_upload_speed_entity: sensor.m5_upload_speed
+      ulm_custom_card_speedtest_ping_entity: sensor.speedtest_ping
+      ulm_custom_card_speedtest_round: true
+
+  - type: "custom:anchor-card"
+    anchor_id: low-battery
+    offset: -60
+
   - type: "custom:button-card"
     template: card_title
-    label: Status
+    label: Low Battery
+
+  - type: custom:auto-entities
+    card:
+      type: glance
+    else:
+      type: markdown
+      content: >-
+        <ha-alert alert-type="info">No battery devices are at their low battery
+        threshold!</ha-alert>
+    filter:
+      include:
+        - domain: sensor
+          entity_id: "*battery*"
+          state: "< 35"
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Pi Hole Overview
 
   - type: custom:auto-entities
     card:
       type: entities
     filter:
       include:
-        - entity_id: 'sensor.pi_hole_*'
+        - entity_id: "sensor.pi_hole_*"
 
   - type: "custom:button-card"
     template: card_title
@@ -64,36 +96,7 @@ cards:
           options:
             show_state: false
       exclude:
-        - entity_id: '*poat_rgb*'
-
-  - type: "custom:anchor-card"
-    anchor_id: low-battery
-    offset: -60
-
-  - type: "custom:button-card"
-    template: card_title
-    label: Low Battery
-
-  - type: custom:auto-entities
-    card:
-      type: glance
-    else:
-      type: markdown
-      content: >-
-        <ha-alert alert-type="info">No battery devices are at their low battery
-        threshold!</ha-alert>
-    filter:
-      include:
-        - domain: sensor
-          entity_id: '*battery*'
-          state: "< 35"
-
-
-  # - type: custom:auto-entities
-  #   card:
-  #     type: entities
-  #     title: Phones
-  #     show_header_toggle: false
-  #   filter:
-  #     include:
-  #       - device: /iPhone/
+        - entity_id: "*poat_rgb*"
+        - domain: button
+        - domain: tts
+        - domain: stt
