--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -15,5 +15,17 @@ cards:
     label: Devices
 
   - type: "custom:button-card"
+    template: card_light
+    entity: switch.gina_computer_socket_1
+
+  - type: "custom:button-card"
+    template: card_cover
+    entity: cover.guest_bedroom_blinds
+    variables:
+      ulm_card_cover_enable_controls: true
+      ulm_card_cover_enable_slider: true
+      ulm_card_cover_color: yellow
+
+  - type: "custom:button-card"
     template: card_title
     label: Sensors
